--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        " ' \\\\textbf{Measurement-Based Post-Gate Analysis:}\\nA qubit is prepared in the state \\\\( |\\\\psi\\\\rangle = \\\\frac{1}{2}|0\\\\rangle + \\\\frac{\\\\sqrt{3}}{2}|1\\\\rangle \\\\). Apply a \\\\( H \\\\) gate followed by a measurement in the computational basis. What are the possible measurement outcomes and their probabilities?\\n']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -316,8 +316,7 @@
        " ' :\\n\\\\textbf{Объяснение:}\\nЭрмитовский оператор \\\\( \\\\hat{F} \\\\) должен удовлетворять условию:\\n\\\\[\\n\\\\int \\\\phi^* \\\\hat{F} \\\\psi \\\\, dv = \\\\int \\\\psi \\\\hat{F}^* \\\\phi \\\\, dv,\\n\\\\]\\nгде \\\\( \\\\hat{F}^* \\\\) — сопряженный оператор. Это определение гарантирует, что \\\\( \\\\hat{F} \\\\) является эрмитовским. Таким образом, правильный ответ:\\n\\\\[\\n3) \\\\int \\\\phi^* \\\\hat{F} \\\\psi \\\\, dv = \\\\int \\\\psi \\\\hat{F}^* \\\\phi \\\\, dv.\\n\\\\]\\n',\n",
        " ' :\\n\\\\textbf{Объяснение:}\\nКвантовая теория используется, когда действия системы сопоставимы с постоянной Планка \\\\( \\\\hbar \\\\). Если действие системы намного меньше \\\\( \\\\hbar \\\\), то можно использовать классическую теорию. Если действие системы гораздо больше \\\\( \\\\hbar \\\\), то квантовая теория также может быть применена, но с учетом сильных квантовых эффектов. Когда действие системы равно \\\\( \\\\hbar \\\\), это также указывает на важность квантовых эффектов, и квантовая теория обязательно должна быть использована. Правильный ответ:\\n\\\\[\\n2) действие системы много меньше \\\\hbar.\\n\\\\]\\n',\n",
        " ' :\\nРазмерность волновой функции в общем случае зависит от пространственного масштаба, в котором эта функция существует. Для стационарного состояния двухэлектронного атома волновая функция имеет размерность, не зависящую от длины, поскольку она определяется через вероятностное распределение. В таком случае волновая функция не имеет размерности, и правильный ответ:\\n\\\\[\\n4) не имеет размерности.\\n\\\\]\\n',\n",
-       " ' :\\n\\\\textbf{Объяснение:}\\n- Уравнение \\\\( \\\\hat{F} \\\\phi_f = f \\\\phi_f \\\\) соответствует \\\\textbf{непрерывному спектру}, так как для непрерывных спектров возможны значения \\\\( f \\\\), которые не являются дискретными.\\n- Уравнение \\\\( \\\\hat{F} \\\\phi_{n,m} = f_n \\\\phi_{n,m} \\\\) указывает на \\\\textbf{смешанный спектр}, где есть как дискретные, так и непрерывные компоненты.\\n- Уравнение \\\\( \\\\hat{F} \\\\phi_n = f_n \\\\phi_n \\\\) соответствует \\\\textbf{дискретному спектру}, так как в этом случае спектр содержит только дискретные значения.\\n',\n",
-       " 'вильный ответ:\\n\\\\[\\n1) \\\\hat{F} \\\\phi_f = f \\\\phi_f \\\\text{ непрерывный}}, \\\\quad 2) \\\\hat{F} \\\\phi_{n,m} = f_n \\\\phi_{n,m} \\\\text{ смешанный}}, \\\\quad 3) \\\\hat{F} \\\\phi_n = f_n \\\\phi_n \\\\text{ дискретный}.\\n\\\\]\\n',\n",
+       " ' :\\n\\\\textbf{Объяснение:}\\n- Уравнение \\\\( \\\\hat{F} \\\\phi_f = f \\\\phi_f \\\\) соответствует \\\\textbf{непрерывному спектру}, так как для непрерывных спектров возможны значения \\\\( f \\\\), которые не являются дискретными.\\n- Уравнение \\\\( \\\\hat{F} \\\\phi_{n,m} = f_n \\\\phi_{n,m} \\\\) указывает на \\\\textbf{смешанный спектр}, где есть как дискретные, так и непрерывные компоненты.\\n- Уравнение \\\\( \\\\hat{F} \\\\phi_n = f_n \\\\phi_n \\\\) соответствует \\\\textbf{дискретному спектру}, так как в этом случае спектр содержит только дискретные значения.\\nПравильный ответ:\\n\\\\[\\n1) \\\\hat{F} \\\\phi_f = f \\\\phi_f \\\\text{ непрерывный}}, \\\\quad 2) \\\\hat{F} \\\\phi_{n,m} = f_n \\\\phi_{n,m} \\\\text{ смешанный}}, \\\\quad 3) \\\\hat{F} \\\\phi_n = f_n \\\\phi_n \\\\text{ дискретный}.\\n\\\\]\\n',\n",
        " ' :\\n\\\\textbf{Объяснение:}\\nЛинейный оператор \\\\( \\\\hat{F} \\\\) должен удовлетворять свойству линейности:\\n\\\\[\\n\\\\hat{F}(c_1 \\\\phi_1 + c_2 \\\\phi_2) = c_1 \\\\hat{F} \\\\phi_1 + c_2 \\\\hat{F} \\\\phi_2.\\n\\\\]\\nЭто свойство гарантирует, что \\\\( \\\\hat{F} \\\\) сохраняет линейную структуру векторного пространства. Таким образом, правильный ответ:\\n\\\\[\\n3) \\\\hat{F}(c_1 \\\\phi_1 + c_2 \\\\phi_2) = c_1 \\\\hat{F} \\\\phi_1 + c_2 \\\\hat{F} \\\\phi_2.\\n\\\\]\\n',\n",
        " ' :\\n\\\\textbf{Объяснение:}\\nАлгоритм Дойча использует только два класса функций — постоянные и периодические. Непостоянные функции не рассматриваются в этом контексте, поэтому утверждение в вопросе неверно. Ответ:\\n\\\\[\\n2) Неверно.\\n\\\\]\\n',\n",
        " ' :\\n\\\\textbf{Объяснение:}\\nУнитарные операторы сохраняют нормировку квантового состояния. Это свойство является основой для квантовых вычислений, так как унитарные операторы описывают эволюцию квантовых систем без изменения их общей вероятностной амплитуды. Таким образом, правильный ответ — это:\\n\\\\[\\n2) Неверно.\\n\\\\]\\n',\n",
@@ -391,7 +390,7 @@
        " '']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
