--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -674,6 +674,129 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_q = []\n",
+    "test_a = []\n",
+    "sq = ''\n",
+    "sa = ''\n",
+    "with open('./q/test_questions.txt', encoding='utf-8') as f:\n",
+    "    for line in f:\n",
+    "        if line != '\\n':\n",
+    "            sq += line\n",
+    "        else:\n",
+    "            test_q.append(sq[3:])\n",
+    "            sq = ''\n",
+    "test_q.append(sq[3:])\n",
+    "\n",
+    "with open('./a/test_answers.txt', encoding='utf-8') as f:\n",
+    "    for line in f:\n",
+    "        if line != '\\n':\n",
+    "            sa += line\n",
+    "        else:\n",
+    "            test_a.append(sa[3:])\n",
+    "            sa = ''\n",
+    "test_q.append(sa[3:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\\n1) $^2P_{1/2}$ \\\\\\\\\\n2) $^2P_{3/2}$ \\\\\\\\\\n4) $^2D_{3/2}$ \\\\\\\\\\n6) $^2S_{1/2}$ \\\\\\\\\\n',\n",
+       " '\\n4) нет правильного ответа \\\\\\\\\\n',\n",
+       " '\\n4) нет правильного ответа \\\\\\\\\\n',\n",
+       " '\\n5) $\\\\hat{X}$ \\\\\\\\\\n',\n",
+       " '\\n1) $|\\\\mathbf{0}>_3$ \\\\\\\\\\n',\n",
+       " '\\n1)Верно \\\\\\\\\\n',\n",
+       " '\\n1) $(|\\\\mathbf{0}>_3 + |\\\\mathbf{7}>_3)/\\\\sqrt{2}$ \\\\\\\\\\n',\n",
+       " '\\nОтвет: 0 \\\\\\\\\\n',\n",
+       " '\\n1) $\\\\hat{X}|q> = $ $a|1> + b|0>$ \\\\\\\\\\n2) $\\\\hat{Y}|q> = $ $ia|1> + ib|0>$ \\\\\\\\\\n3) $\\\\hat{Z}|q> = $ $a|0> - b|1>$ \\\\\\\\\\n4) $\\\\hat{S}|q> = $ $a|0> + ib|1>$ \\\\\\\\\\n5) $\\\\hat{T}|q> = $ нет правильного ответа \\\\\\\\\\n',\n",
+       " '\\n1) -b|0> + a|1> \\\\\\\\\\n',\n",
+       " ' \\nОтвет 0.5 \\\\\\\\\\n',\n",
+       " ' \\n4) |1> \\\\\\\\\\n',\n",
+       " ' \\n1) $4d_{3/2}$ \\\\\\\\\\n2) $4s_{1/2}$ \\\\\\\\\\n4) $4f_{5/2}$ \\\\\\\\\\n6) $4d_{5/2}$ \\\\\\\\\\n',\n",
+       " ' \\n5) импульс, координата, энергия и время \\\\\\\\\\n',\n",
+       " ' \\nОтвет 25 \\\\\\\\\\n',\n",
+       " ' \\n3) Спин \\\\\\\\\\n',\n",
+       " ' \\n2) собственные функции образуют полный набор \\\\\\\\\\n3) собственные числа образуют ограниченное множество упорядоченных чисел \\\\\\\\\\n4) собственные функции ортонормированы \\\\\\\\\\n6) собственные значения - действительные числа \\\\\\\\\\n7) собственные функции коммутирующих операторов одинаковы \\\\\\\\\\n',\n",
+       " ' \\n3) 1 \\\\\\\\\\n',\n",
+       " ' \\n3) предсказать значения измеряемых величин, которые будут наблюдаться на опыте и с какой вероятностью \\\\\\\\\\n',\n",
+       " ' \\n2)векторное свойство ряда элементарных частиц, направленное против их спина \\\\\\\\\\n',\n",
+       " ' \\n1)Верно \\\\\\\\\\n']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Отметьте существующие термы щелочных атомов \\\\\\\\\\n1) $^2P_{1/2}$ \\\\\\\\\\n2) $^2P_{3/2}$ \\\\\\\\\\n3) $^1S_{1/2}$ \\\\\\\\\\n4) $^2D_{3/2}$ \\\\\\\\\\n5) $^1D_{3/2}$ \\\\\\\\\\n6) $^2S_{1/2}$ \\\\\\\\\\n7) $^1P_{1/2}$ \\\\\\\\\\n',\n",
+       " 'С каким оператором совпадает оператор $U3(\\\\theta, -\\\\frac{\\\\pi}{2}, \\\\frac{\\\\pi}{2}) ?$ \\\\\\\\\\n1) $R_z(\\\\theta)$ \\\\\\\\\\n2) $R_x(\\\\theta)$ \\\\\\\\\\n3) $R_y(\\\\theta)$ \\\\\\\\\\n4) нет правильного ответа \\\\\\\\\\n',\n",
+       " 'С каким оператором совпадает оператор $U1(\\\\frac{\\\\pi}{4})$ \\\\\\\\\\n1) Y \\\\\\\\\\n2) X \\\\\\\\\\n3) нет правильного ответа \\\\\\\\\\n4) Z \\\\\\\\\\n5) S \\\\\\\\\\n',\n",
+       " 'Чему равно произведение однокубитовых операторов $\\\\hat{H}\\\\hat{Z}\\\\hat{H} ?$ \\\\\\\\\\n1) $-\\\\hat{Y}$ \\\\\\\\\\n2) $-\\\\hat{X}$ \\\\\\\\\\n3) $\\\\hat{Y}$ \\\\\\\\\\n4) $- \\\\hat{H}$ \\\\\\\\\\n5) $\\\\hat{X}$ \\\\\\\\\\n6) $\\\\hat{H}$ \\\\\\\\\\n',\n",
+       " 'отметьте правильный ответ для дейтсвия операторов $W^{(3)}CCNOT_{1, 2, 3}W^{(3)}$ на трёхкубитовое базисное состояние $|\\\\mathbf{0}>_3$ \\\\\\\\\\n1) $|\\\\mathbf{0}>_3$ \\\\\\\\\\n2) $|\\\\mathbf{4}>_3$ \\\\\\\\\\n3) $(|\\\\mathbf{0}>_3 + |\\\\mathbf{2}>_3 + |\\\\mathbf{4}>_3 + |\\\\mathbf{6}>_3)/\\\\sqrt{4}$ \\\\\\\\\\n4) $(|\\\\mathbf{0}>_3 + |\\\\mathbf{1}>_3 + |\\\\mathbf{2}>_3 + |\\\\mathbf{3}>_3 + |\\\\mathbf{4}>_3 + |\\\\mathbf{5}>_3 + |\\\\mathbf{6}>_3 + |\\\\mathbf{7}>_3)/\\\\sqrt{8}$ \\\\\\\\\\n5) $(|\\\\mathbf{0}>_3 + |\\\\mathbf{2}>_3 - |\\\\mathbf{4}>_3 + |\\\\mathbf{6}>_3)/\\\\sqrt{4}$ \\\\\\\\\\n6) нет правильного ответа \\\\\\\\\\n',\n",
+       " 'Без метастабильных состояний создать квантовый генератор на атомах нельзя \\\\\\\\\\n1)Верно \\\\\\\\\\n2)Неверно \\\\\\\\ \\n',\n",
+       " 'отметьте правильный ответ для дейтсвия операторов $W^{(3)}CCNOT_{1, 2, 3}W^{(3)}$ на трёхкубитовое базисное состояние $|\\\\mathbf{7}>_3$ \\\\\\\\\\n1) $(|\\\\mathbf{0}>_3 + |\\\\mathbf{7}>_3)/\\\\sqrt{2}$ \\\\\\\\\\n2) $(|\\\\mathbf{0}>_3 - |\\\\mathbf{7}>_3)/\\\\sqrt{2}$ \\\\\\\\\\n3) $|\\\\mathbf{0}>_3$ \\\\\\\\\\n4) $(-|\\\\mathbf{1}>_3 + |\\\\mathbf{3}>_3 + |\\\\mathbf{5}>_3 + |\\\\mathbf{7}>_3)/2$ \\\\\\\\\\n5) $(|\\\\mathbf{0}>_3 + |\\\\mathbf{2}>_3 + |\\\\mathbf{4}>_3 + |\\\\mathbf{6}>_3)/2$ \\\\\\\\\\n6) $|\\\\mathbf{7}>_3$ \\\\\\\\\\n7) $(|\\\\mathbf{0}>_3 - |\\\\mathbf{1}>_3 + |\\\\mathbf{2}>_3 - |\\\\mathbf{3}>_3 + |\\\\mathbf{4}>_3 - |\\\\mathbf{5}>_3 + |\\\\mathbf{6}>_3 - |\\\\mathbf{7}>_3)/\\\\sqrt{8}$ \\\\\\\\\\n8) $(|\\\\mathbf{1}>_3 + |\\\\mathbf{3}>_3 + |\\\\mathbf{5}>_3 - |\\\\mathbf{7}>_3)/2$ \\\\\\\\\\n',\n",
+       " 'Какова вероятность изсерения состояния |0> в трёхкубитовом регистре вида $(-|\\\\mathbf{1}>_3 + |\\\\mathbf{3}>_3 - |\\\\mathbf{5}>_3 + |\\\\mathbf{7}>_3)/2$. Ответ -- десятичное число. \\\\\\\\\\n',\n",
+       " 'Каким выражением определяется действие однокубитовых операторов $\\\\hat{X}, \\\\hat{Y}, \\\\hat{Z}, \\\\hat{S}, \\\\hat{T}$ на кубит $|q> = \\\\alpha|0> + \\\\beta|1>$ ? \\\\\\\\\\n1) $\\\\hat{X}|q> = $ \\\\\\\\\\n2) $\\\\hat{Y}|q> = $ \\\\\\\\\\n3) $\\\\hat{Z}|q> = $ \\\\\\\\\\n4) $\\\\hat{S}|q> = $ \\\\\\\\\\n5) $\\\\hat{T}|q> = $ \\\\\\\\\\n',\n",
+       " ' Чему равно действие оператора $R_y$ на кубит $a|0> + b|1>$ при значении $\\\\theta = \\\\pi$ ?\\\\\\\\\\n1) -b|0> + a|1> \\\\\\\\\\n2) b|0> + a|1> \\\\\\\\\\n3) нет правильного ответа \\\\\\\\\\n4) -a|0> + b|1> \\\\\\\\\\n',\n",
+       " ' На кубит |q> = 0.6|0> + 0.8|1> действует оператор $R_x(\\\\theta).$ Какова вероятность измерения состояния |0> после действия $R_x(\\\\theta)$ при $\\\\theta = \\\\frac{\\\\pi}{2}$? ответ -- десятичное число, максимум две цифры после десятичной точки (допустимая точность 0.001) \\\\\\\\\\n',\n",
+       " ' Чему равно действие оператора $R_x$ на состояние |0> при значении $\\\\theta = \\\\pi/2$ ? \\\\\\\\\\n1) -i|1> \\\\\\\\\\n2) i|1> \\\\\\\\\\n3) |1> \\\\\\\\\\n4) |1> \\\\\\\\\\n5) |0> \\\\\\\\\\n6) нет правильного ответа \\\\\\\\\\n',\n",
+       " ' Отметить состояния тонкой структуры атома водорода в которые может перейти атом при резонансном поглощении одного фотона, если начальное состояние атома было $3p_{3/2}$ \\\\\\\\\\n1) $4d_{3/2}$ \\\\\\\\\\n2) $4s_{1/2}$ \\\\\\\\\\n3) $4s_{3/2}$ \\\\\\\\\\n4) $4f_{5/2}$ \\\\\\\\\\n5) $3d_{5/2}$ \\\\\\\\\\n6) $4d_{5/2}$ \\\\\\\\\\n',\n",
+       " ' Какие переменные входят в полный набор (для определения состояния) свободной частицы ? \\\\\\\\\\n1)импульс и координата \\\\\\\\\\n2) энергия и время \\\\\\\\\\n3) координата \\\\\\\\\\n4) энергия и координата \\\\\\\\\\n5) импульс, координата, энергия и время да \\\\\\\\\\n6) импульс \\\\\\\\\\n7) импульс и время \\\\\\\\\\n8) координата и время \\\\\\\\\\n',\n",
+       " ' Скольок различных уровней энергии в тонкой структуре атома водорода при значении главного квантового числа равного 5? \\\\\\\\\\n',\n",
+       " ' Собственный момент импульса элементарных частиц - это ... \\\\\\\\\\n1) Квант \\\\\\\\\\n2) Орибталь \\\\\\\\\\n3) Спин \\\\\\\\\\n',\n",
+       " ' Отметьте верный утверждения для линейных и эрмитовых операторов \\\\\\\\\\n1) собственные функции - действительные функции \\\\\\\\\\n2) собственные функции образуют полный набор \\\\\\\\\\n3) собственные числа образуют ограниченное множество упорядоченных чисел \\\\\\\\\\n4) собственные функции ортонормированы \\\\\\\\\\n5) собственные числа образуют эквидистантный набор \\\\\\\\\\n6) собственные значения - действительные числа \\\\\\\\\\n7) собственные функции коммутирующих операторов одинаковы \\\\\\\\\\n',\n",
+       " ' Чему равна сумма $\\\\sum_n|n><n|$, если $|n>$ - базис ? \\\\\\\\\\n1) $\\\\infty$ \\\\\\\\\\n2) дельта символ Кронекера \\\\\\\\\\n3) 1 \\\\\\\\\\n4) нельзя так составить сумму \\\\\\\\\\n5) дельта функция Дирака \\\\\\\\\\n',\n",
+       " ' Волновая функция или функция состояния дает возможность ... \\\\\\\\\\nВыберите один ответ: \\\\\\\\\\n1) описать законы квантовой теории \\\\\\\\\\n2) получить информацию о значении энергии частицы \\\\\\\\\\n3) предсказать значения измеряемых величин, которые будут наблюдаться на опыте и с какой вероятностью \\\\\\\\\\n4) описать закон движения частицы \\\\\\\\\\n5) получить информацию о значении координат и импульса частицы \\\\\\\\\\n',\n",
+       " ' Что такое магнитный спиновый момент ? \\\\\\\\\\n1)векторное свойство ряда элементарных частиц, направленное по направлению их спина \\\\\\\\\\n2)векторное свойство ряда элементарных частиц, направленное против их спина \\\\\\\\\\n3) Магнит запутанный со спином \\\\\\\\\\n4) тоже, что и спин частицы \\\\\\\\\\n',\n",
+       " ' Сверхтонкое расщепление основного состояния атома водорода отсутсвует \\\\\\\\\\n1)Верно \\\\\\\\\\n2)Неверно \\\\\\\\\\n',\n",
+       " ' Чему равна сумма квадратов матриц Паули $\\\\sigma_x^2 + \\\\sigma_y^2$. Введите значение \\\\\\\\',\n",
+       " ' \\nОтвет 2 \\\\\\\\']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "feed = [{'question': q, 'answer': a} for q, a in zip(test_q, test_a)]\n",
+    "\n",
+    "json.dump(feed, open('./test.json', 'w', encoding='utf-8'), indent=2, ensure_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
